# A-Share-Decision-Cockpit

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  environment.yml  pyproject.toml  requirements.txt  run_cli.py  start_all.bat
artifacts/models/: latest_metrics.json
artifacts/reports/: daily_model_health.json  daily_report.html  daily_report.md  daily_terminal_predictions.csv  daily_touch_predictions.csv
configs/: default.json  live_run.json
docs/: project_architecture.md
engine/: __init__.py  config.py  types.py
engine/agents/: __init__.py  providers.py  service.py
engine/execution/: __init__.py  broker.py  interfaces.py
engine/market/: __init__.py  service.py
engine/memory/: service.py
engine/orchestration/: __init__.py  daily_runner.py
engine/risk/: __init__.py  service.py
engine/runtime/: tasks.py
engine/sim/: __init__.py  service.py
engine/storage/: __init__.py  db.py  system_store.py
engine/text/: __init__.py  service.py
scripts/: run_backend.ps1  run_daily.ps1  run_frontend.ps1  run_live.ps1  start_all.ps1
service/: __init__.py
service/frontend/: index.html  package-lock.json  package.json
service/frontend/src/: App.tsx  styles.css
service/server/: __init__.py  main.py
src/astock_prob/: __init__.py  cli.py  config.py  pipeline.py  utils.py
src/astock_prob/backtest/: __init__.py  walkforward.py
tests/: test_api.py  test_constraints.py  test_health.py  test_labels.py  test_llm_chain.py  test_market.py  test_pipeline.py  test_risk.py  test_sim.py  test_text.py  test_v2_modes.py
(+18 files in other folders)
