[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astock-prob"
version = "0.1.0"
description = "Three-month terminal and touch probability forecasting for A-share stocks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scipy>=1.10",
  "akshare>=1.12",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "matplotlib>=3.7",
  "plotly>=5.18",
]

[project.scripts]
astock-prob = "astock_prob.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
