[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-local-trader"
version = "0.1.0"
description = "A-share local decision workstation inspired by AI-Trader."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "pyarrow>=14.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "akshare>=1.12",
  "pypdf>=5.0",
]

[project.scripts]
ashare-local-trader = "service.server.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "service*"]
